Make MICA icon hidden on mobile to avoid overflow

--- a/public/css/queries.css
+++ b/public/css/queries.css
@@ -55,6 +55,12 @@
 		text-align: center;
 		width: 100%;
 	}
+	.resume .mica {
+		padding-left: 0;
+	}
+	.resume .mica:before {
+		display: none;
+	}
 }
 
 @media (min-width: 440px) {
@@ -188,6 +194,19 @@
 		position: absolute;
 		padding-left: 25px;
 		width: auto;
+	}
+
+	.resume .position-title {
+		float: left;
+	}
+	.resume .position-date {
+		float: right;
+	}
+	.resume .mica {
+		padding-left: 88px;
+	}
+	.resume .mica:before {
+		display: block;
 	}
 }
 
